Create endpoint to shopping list
