# src/main/java/com/restaurant/app/cart/service/delivered/dto/CartDelivered.java
@@ -1,0 +1,13 @@
+package com.restaurant.app.cart.service.delivered.dto;
+
+import java.util.List;
+
+public record CartDelivered(
+        Long cartId,
+        Long userId,
+        Boolean loyaltyCard,
+        Double cartValue,
+        List<String> food,
+        List<Double> foodPrice
+) {
+}
